JT-7406 Added spacing issues for search box on homepage when inbetween ipad and XS resolution

--- a/app/assets/stylesheets/components/_search-autosuggest.scss
+++ b/app/assets/stylesheets/components/_search-autosuggest.scss
@@ -104,10 +104,16 @@
   .search-mode-homepage{
     // Class added to search box to allow mobile user to have more room to search
     // Overwrites CSS from search-box class
-    margin-top: -185px;
+    @media (min-width: 549px){
+      margin-top: -150px;
+    }
+    @media (max-width: 548px){
+      margin-top: -185px;
+    }
     z-index: 5;
     margin-left: -10px;
     width: 100%;
+    // For small phone screen widths
     @media (max-width: 320px){
       width: 110%;
     }
